grid items text overflow --fix

--- a/assets/scss/sections/_announcements.scss
+++ b/assets/scss/sections/_announcements.scss
@@ -70,7 +70,12 @@
         width: 100%;
         font: 400 14px Gilroy;
         color: $dark-blue-5;
-        
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        line-clamp: 2;
+        -webkit-box-orient: vertical;
       }
       &__options {
         display: flex;
@@ -78,17 +83,17 @@
           margin-right: 16px;
         }
       }
-      &__actions{
+      &__actions {
         display: flex;
         justify-content: flex-end;
         width: 100%;
       }
-      &__checks{
+      &__checks {
         width: 100%;
         display: flex;
         justify-content: flex-end;
       }
-      &--infos{
+      &--infos {
         display: flex;
         justify-content: space-between;
         width: 100%;
@@ -152,11 +157,10 @@
         width: 100%;
         display: flex;
         justify-content: space-between;
-        &--left{
-          
+        &--left {
           width: 30%;
         }
-        &--right{
+        &--right {
           width: 70%;
           display: flex;
           justify-content: flex-end;
@@ -165,9 +169,9 @@
       &__bottom {
         display: flex;
         justify-content: space-between;
-        &--right{
+        &--right {
           display: flex;
-          &:not(:last-child){
+          &:not(:last-child) {
             margin-right: 10px;
           }
         }
@@ -218,10 +222,9 @@
           background-color: $red-1;
         }
       }
-      .badge-blue{
+      .badge-blue {
         background: $dark-blue-2;
       }
-
     }
     a.abs-link {
       z-index: 1;
